Books fixture file for testing

--- a/test/fixtures/books.yml
+++ b/test/fixtures/books.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: MyString
-  author: MyString
-  isbn: MyString
+  title: Sample Book
+  author: Sample Author
+  isbn: 1234567890123
 
 two:
-  title: MyString
-  author: MyString
-  isbn: MyString
+  title: Borrowed Book
+  author: Test Author
+  isbn: 0987654321098
