--- a/test/fixtures/borrowings.yml
+++ b/test/fixtures/borrowings.yml
@@ -3,11 +3,11 @@
 one:
   user: one
   book: one
-  due_date: 2025-02-10 19:11:23
-  returned_at: 2025-02-10 19:11:23
+  due_date: <%= 2.weeks.from_now %>
+  returned_at: <%= 1.week.from_now %>
 
 two:
   user: two
   book: two
-  due_date: 2025-02-10 19:11:23
-  returned_at: 2025-02-10 19:11:23
+  due_date: <%= 2.weeks.from_now %>
+  returned_at: <%= 1.week.from_now %>
